// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing BarIndicator Component renders as expected 1`] = `
<withAnimatable(Styled(ViewNB))
  animation="fadeIn"
  delay={0}
  direction="normal"
  duration={250}
  iterationCount={1}
  iterationDelay={0}
  onAnimationBegin={[Function]}
  onAnimationEnd={[Function]}
  onTransitionBegin={[Function]}
  onTransitionEnd={[Function]}
  useNativeDriver={false}
>
  <Styled(ViewNB)>
    <Styled(ViewNB)
      style={
        Object {
          "marginBottom": 11.5,
          "marginLeft": 35,
          "marginRight": 20,
          "marginTop": 5,
        }
      }
    >
      <Placeholder
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#eee",
              "borderRadius": 2.5,
              "height": 10,
              "justifyContent": "center",
              "marginTop": 10,
            },
            Object {
              "width": "30%",
            },
          ]
        }
      />
      <Placeholder
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#eee",
              "borderRadius": 2.5,
              "height": 10,
              "justifyContent": "center",
              "marginTop": 10,
            },
            Object {
              "width": "100%",
            },
          ]
        }
      />
      <Placeholder
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#eee",
              "borderRadius": 2.5,
              "height": 10,
              "justifyContent": "center",
              "marginTop": 10,
            },
            Object {
              "width": "100%",
            },
          ]
        }
      />
    </Styled(ViewNB)>
    <Styled(ViewNB)
      style={
        Object {
          "backgroundColor": "#eee",
          "height": 1,
          "marginLeft": 35,
          "marginTop": 5,
          "width": "100%",
        }
      }
    />
  </Styled(ViewNB)>
</withAnimatable(Styled(ViewNB))>
`;

exports[`Testing BarIndicator Component renders with delayed animation 1`] = `
<withAnimatable(Styled(ViewNB))
  animation="fadeIn"
  delay={0}
  direction="normal"
  duration={250}
  iterationCount={1}
  iterationDelay={0}
  onAnimationBegin={[Function]}
  onAnimationEnd={[Function]}
  onTransitionBegin={[Function]}
  onTransitionEnd={[Function]}
  useNativeDriver={false}
>
  <Styled(ViewNB)>
    <Styled(ViewNB)
      style={
        Object {
          "marginBottom": 11.5,
          "marginLeft": 35,
          "marginRight": 20,
          "marginTop": 5,
        }
      }
    >
      <Placeholder
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#eee",
              "borderRadius": 2.5,
              "height": 10,
              "justifyContent": "center",
              "marginTop": 10,
            },
            Object {
              "width": "30%",
            },
          ]
        }
      />
      <Placeholder
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#eee",
              "borderRadius": 2.5,
              "height": 10,
              "justifyContent": "center",
              "marginTop": 10,
            },
            Object {
              "width": "100%",
            },
          ]
        }
      />
      <Placeholder
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#eee",
              "borderRadius": 2.5,
              "height": 10,
              "justifyContent": "center",
              "marginTop": 10,
            },
            Object {
              "width": "100%",
            },
          ]
        }
      />
    </Styled(ViewNB)>
    <Styled(ViewNB)
      style={
        Object {
          "backgroundColor": "#eee",
          "height": 1,
          "marginLeft": 35,
          "marginTop": 5,
          "width": "100%",
        }
      }
    />
  </Styled(ViewNB)>
</withAnimatable(Styled(ViewNB))>
`;

exports[`Testing BarIndicator Component renders with paragraph mode 1`] = `
<withAnimatable(Styled(ViewNB))
  animation="fadeIn"
  delay={0}
  direction="normal"
  duration={250}
  iterationCount={1}
  iterationDelay={0}
  onAnimationBegin={[Function]}
  onAnimationEnd={[Function]}
  onTransitionBegin={[Function]}
  onTransitionEnd={[Function]}
  useNativeDriver={false}
>
  <Styled(ViewNB)>
    <Styled(ViewNB)
      style={
        Object {
          "marginHorizontal": 15,
          "marginTop": 15,
        }
      }
    >
      <Placeholder
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#eee",
              "borderRadius": 2.5,
              "height": 10,
              "justifyContent": "center",
            },
            Object {
              "width": "30%",
            },
          ]
        }
      />
      <Placeholder
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#eee",
              "borderRadius": 2.5,
              "height": 10,
              "justifyContent": "center",
              "marginTop": 10,
            },
            Object {
              "width": "100%",
            },
          ]
        }
      />
      <Placeholder
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#eee",
              "borderRadius": 2.5,
              "height": 10,
              "justifyContent": "center",
              "marginTop": 10,
            },
            Object {
              "width": "100%",
            },
          ]
        }
      />
      <Styled(ViewNB)>
        <Placeholder
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "backgroundColor": "#eee",
                "borderRadius": 2.5,
                "height": 10,
                "justifyContent": "center",
                "marginTop": 10,
              },
              Object {
                "width": "100%",
              },
            ]
          }
        />
        <Placeholder
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "backgroundColor": "#eee",
                "borderRadius": 2.5,
                "height": 10,
                "justifyContent": "center",
                "marginTop": 10,
              },
              Object {
                "width": "100%",
              },
            ]
          }
        />
      </Styled(ViewNB)>
    </Styled(ViewNB)>
  </Styled(ViewNB)>
</withAnimatable(Styled(ViewNB))>
`;

exports[`Testing BarIndicator Component renders without animation 1`] = `
<Styled(ViewNB)>
  <Styled(ViewNB)>
    <Styled(ViewNB)
      style={
        Object {
          "marginBottom": 11.5,
          "marginLeft": 35,
          "marginRight": 20,
          "marginTop": 5,
        }
      }
    >
      <Placeholder
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#eee",
              "borderRadius": 2.5,
              "height": 10,
              "justifyContent": "center",
              "marginTop": 10,
            },
            Object {
              "width": "30%",
            },
          ]
        }
      />
      <Placeholder
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#eee",
              "borderRadius": 2.5,
              "height": 10,
              "justifyContent": "center",
              "marginTop": 10,
            },
            Object {
              "width": "100%",
            },
          ]
        }
      />
      <Placeholder
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#eee",
              "borderRadius": 2.5,
              "height": 10,
              "justifyContent": "center",
              "marginTop": 10,
            },
            Object {
              "width": "100%",
            },
          ]
        }
      />
    </Styled(ViewNB)>
    <Styled(ViewNB)
      style={
        Object {
          "backgroundColor": "#eee",
          "height": 1,
          "marginLeft": 35,
          "marginTop": 5,
          "width": "100%",
        }
      }
    />
  </Styled(ViewNB)>
</Styled(ViewNB)>
`;
